# wb_feedbacks_bot

./: .env  .gitignore  Dockerfile  main.py  production-docker.sh  pyproject.toml  requirements.txt
.github/workflows/: docker-develop.yml  docker-except-main.yml  docker-image.yml  docker-main.yml
app/connections/: __init__.py  boto3.py  object_storage.py  redis.py  ydb.py  ymq.py  yoo_kassa.py
app/settings/: __init__.py  cloud.py  logic.py  main.py  microsoft.py  yookassa.py
commands/: __init__.py  consts.py  exports.py  internals.py
connections/: __init__.py  boto3.py  database.py  object_storage.py  redis.py  ydb.py  ymq.py  yoo_kassa.py
libs/gdrive/: consts.py  exceptions.py  utils.py
libs/microsoft/: __init__.py  client.py  clients.py  consts.py  credentials.py  exceptions.py
libs/wildberries/: __init__.py  client.py  consts.py  exceptions.py  schemas.py
libs/ydb/: __init__.py  consts.py  utils.py
logic/auth/: __init__.py  exports.py  internals.py
logic/cabinets/: __init__.py  exports.py  internals.py  messages.py  schemas.py
logic/feedbacks/: __init__.py  internals.py  messages.py  schemas.py
logic/onboarding/: __init__.py  exports.py  handlers.py  internals.py
markups/: common.py  feedbacks.py  onboarding.py  purchases.py  root.py
settings/: __init__.py  event.py  logic.py  microsoft.py  yookassa.py
ydb_tables/: admin_credentials.sql  barcode_feedbacks.sql  brand_feedbacks.sql  cabinets.sql  clients.sql  commands.sql  exclude_feedbacks.sql  feedbacks.sql  payments.sql  promocodes.sql  purchases.sql  settings.sql  users.sql
(+94 files in other folders)
