[tool.poetry]
name = "reviews"
version = "0.1.0"
description = ""
authors = ["andrejmaznin <andrejmaznin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
yandexcloud = "^0.194.0"
ydb = "^2.12.1"
python-dotenv = "^0.21.1"
pydantic = "^1.10.4"
requests = "^2.28.2"
boto3 = "1.24.59"
aioboto3 = "^10.3.0"
prometheus-client = "^0.16.0"
pytelegrambotapi = "^4.9.0"
pandas = "^1.5.3"
yadisk = "^1.3.0"
google-api-python-client = "^2.79.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^1.0.0"
telebot = "^0.0.5"
flask = "^2.2.3"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

